[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-gemini-bot"
version = "1.0.0"
description = "Telegram bot with Gemini AI integration"
requires-python = ">=3.8"
dependencies = [
    "aiogram>=3.7,<4.0",
    "aiohttp>=3.8,<4.0",
    "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8.0",
    "pytest-asyncio>=0.21,<1.0"
]
